--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
+:root {
+--white: #FFFFFF;
+--black: #090A0AE5;
+--gray: #F9F9F9;
+--blue: #00A2F5;
+}
+
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +17,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url(./images/background.jpg);
 }
 
 code {
