--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-image: url(./images/background.jpg);
   background-size: cover;
+  /* background-repeat: no-repeat; */
 }
 
 code {
