--- a/src/styles/Thread.css
+++ b/src/styles/Thread.css
@@ -4,10 +4,15 @@
   overflow: hidden;
   padding: 20px 25px;
   border: 1px solid #F0F0F0;
+  text-decoration: none;
+}
+
+.thread:hover {
+  background-color: var(--hover);
+  transition: background-color 0.5s ease;
 }
 
 .thread__wrapper {
-  text-decoration: none;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -30,8 +35,13 @@
   justify-content: flex-start;
   align-items: flex-start;
   margin-left: 10px;
+  color: var(--black) !important;
 }
 
+.thread__profile span:first-of-type {
+  /* color: red; */
+  font-weight: 800;
+}
 
 .thread__header > img {
   width: 57px;
@@ -40,10 +50,12 @@
 
 .thread__text {
   text-align: left;
-  font-weight: 500;
+  font-weight: 600;
   margin-bottom: 15px;
+  color: var(--black) !important;
 }
 
 .created_at {
   text-align: justify;
+  color: var(--gray-text);
 }
