--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,49 +1,102 @@
 .Header {
   background-color: var(--white);
-  height: 80px;
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  position: fixed;
-  z-index: 1;
-}
-
-.wrapper__header {
-  padding-left: 100px;
-  padding-right: 100px;
-  padding-top: 18px;
-  padding-bottom: 17px;
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
+  height          : 80px;
+  display         : flex;
+  justify-content : space-between;
+  position        : fixed;
+  z-index         : 1;
+  width           : 100vw;
 }
 
 .logo {
-  width: 45px;
+  width : 45px;
   height: 45px;
 }
 
-.right__header {
-  display: flex;
+.wrapper__header {
+  display        : flex;
+  justify-content: space-between;
+  align-items    : center;
+  padding-left   : 100px;
+  padding-right  : 100px;
+  padding-top    : 18px;
+  padding-bottom : 17px;
+  width          : 100%;
+  gap            : 30px;
 }
 
-.right__header > input {
-  border-radius: 15px;
-  background-color: var(--gray);
+.search-input {
+  width: 100%;
   border: none;
-  height: 45px;
-  width: 388px;
+  background-color: var(--gray);
+  height : 45px;
+  border-radius: 15px;
   padding-left: 17px;
+  background-image: url(../images/search.svg);
+  background-repeat: no-repeat;
+  background-position: 95% 50%;
+  padding-right: 17px;
+}
+
+.search-input:focus {
+  outline: none;
+}
+
+.search-button {
+  background-color: #FFF;
+  width           : 30px;
+  height          : 30px;
+  border-radius   : 10px;
+  margin-right    : 17px;
+}
+
+.search-button>img {
+  color: blue !important;
 }
 
 .network {
   display: flex;
-  gap: 15px;
-  margin-left: 30px;
+  gap    : 15px;
 }
 
 .network img {
-  width: 30px;
-  height: 30px;
+  width     : 30px;
+  height    : 30px;
   margin-top: 6px;
+}
+
+/* ========================== RESPONSIVE mobile =============== */
+
+@media only screen and (max-width: 780px) {
+  .Header {
+    height: 60px !important;
+  }
+
+  .logo {
+    width : 30px;
+    height: 30px;
+  }
+
+  .wrapper__header {
+    padding: 15px 20px;
+    display: flex;
+  }
+
+  .wrapper__header:focus-within img {
+    display: none;
+  }
+
+  .wrapper__header:focus-within .NavMobile {
+    display: none;
+  }
+
+  .search-input {
+    width: 70vw;
+  }
+
+  .search-input:focus {
+    width: 90vw;
+    transition: width 0.8s ease;
+  }
+
 }
