Content margins fixed, css lint

--- a/src/styles/Categories.css
+++ b/src/styles/Categories.css
@@ -1,7 +1,24 @@
 .Categories {
-  display: flex;
-  flex-wrap: wrap;
+  display        : flex;
+  flex-wrap      : wrap;
   justify-content: center;
-  max-width: 938px;
-  gap: 20px;
+  max-width      : 9px;
+  gap            : 20px;
+}
+
+@media only screen and (max-width: 780px) {
+  .Categories {
+    justify-content   : space-between;
+    flex-wrap         : nowrap;
+    overflow          : scroll;
+    padding-right     : 20px;
+    width             : 100%;
+    white-space       : nowrap;
+    -ms-overflow-style: none;
+    scrollbar-width   : none;
+  }
+
+  .Categories::-webkit-scrollbar {
+    display: none;
+  }
 }
