--- a/src/styles/Content.css
+++ b/src/styles/Content.css
@@ -66,8 +66,13 @@
     text-align   : center;
   }
 
+  .Content>h1 {
+    font-size: 30px;
+  }
+
   .Content>h2 {
     font-size    : 14px;
+    margin-right: 20px;
     margin-bottom: 16px;
   }
 
@@ -75,10 +80,12 @@
     width     : 155px !important;
     height    : 39px !important;
     text-align: center;
+    display: flex;
+    align-items: center;
   }
 
   .button>span {
-    font-size: 1px;
+    font-size: 18px;
   }
 
   .created__by {
