--- a/src/styles/Categories.css
+++ b/src/styles/Categories.css
@@ -4,6 +4,7 @@
   justify-content: center;
   max-width      : 938px;
   gap            : 20px;
+  padding-left: 23px;
 }
 
 @media only screen and (max-width: 780px) {
