--- a/src/styles/Content.css
+++ b/src/styles/Content.css
@@ -61,8 +61,8 @@
   .Content {
     background   : none;
     width        : 100%;
-    padding-left : 20px;
     padding-right: 0;
+    padding-left: 0;
     text-align   : center;
   }
 
@@ -74,6 +74,7 @@
     font-size    : 14px;
     margin-right: 20px;
     margin-bottom: 16px;
+    margin-left: 23px;
   }
 
   .button {
@@ -94,7 +95,6 @@
 
   .wrapper-categories {
     width  : 100%;
-    padding: 0 0 0 20px;
+    padding: 0;
   }
-
 }
