--- a/src/index.css
+++ b/src/index.css
@@ -33,19 +33,14 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-image: url(./images/Background.svg);
+  background-image: url(./images/Background.png);
   background-size: cover;
   background-repeat: no-repeat;
 }
 
 @media only screen and (max-width: 1000px) {
   body {
-    background-image: url(./images/background-responsive.svg);
+    background-image: url(./images/Background-mobile.png);
   background-size: cover;
   background-repeat: no-repeat;
   }
